welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Missing closing brace `}' assumed here
for (nbPas <- 1 to 6) {
^Program:6: error: expected class or object definition
def haveBaggle():Boolean = {if (vuBiscuit()=false) {
^